# ai-triad-model

./: .env.example  .gitignore  Makefile  README.md  SETUP.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-landing-page.yml
config/: default.yaml
docs/: ADVANCED_PYDANTIC_AI_FEATURES.md  MCP_TOOLS_INTEGRATION.md  MULTI_AGENT_ARCHITECTURE.md  README.md  TOOLS_AND_MCP_GUIDE.md
docs/guides/: LOGFIRE_PRODUCTION_SETUP.md  MODEL_CONFIGURATION.md
docs/system/: README.md  agents.md  api-endpoints.md  architecture.md  constitutional-crisis-management.md  evals-and-performance.md  graph-workflows-and-sub-agents.md  migration-guide.md  monitoring-and-observability.md  operations.md  scalability.md  security.md  testing-and-deployment.md  tools-and-dependencies.md
landing-page/: 404.html  about.html  api.html  blog.html  changelog.html  community.html  contact.html  docs.html  examples.html  guides.html  index.html  privacy.html  security.html  support.html  terms.html
landing-page/css/: api.css  contact.css  docs.css  examples.css  legal.css  styles.css  support.css
landing-page/js/: contact.js  docs.js  examples.js  legal.js  main.js  support.js
prisma/: schema.prisma
scripts/: check_imports.py  check_syntax.py  dependency_check.py  find_unused_imports.py  fix_all_imports.py  fix_api_models_imports.py  fix_base_agent_imports.py  fix_imports.py  fix_message_imports.py  fix_model_settings_imports.py  setup_prisma.py  start.py
src/triad/: __init__.py
src/triad/core/: constitutional.py  dependencies.py
src/triad/database/: models.py
triad/: __init__.py
triad/a2a/: __init__.py  broker.py  broker_core.py  client.py  models.py  storage.py
triad/agents/: __init__.py
triad/agents/core/: __init__.py  base.py  enhanced_agents.py  governance_agents.py
triad/agents/features/: __init__.py  direct_responses.py  input_handling.py  input_processing.py  input_types.py  input_validation.py  retry_patterns.py  thinking_patterns.py
triad/agents/patterns/: __init__.py  coordination.py  delegation.py  multi_agent_patterns.py  workflows.py
triad/agents/roles/: __init__.py  evaluator.py  executor.py  overwatch.py  planner.py
triad/api/: __init__.py  main.py  models.py
triad/api/routes/: __init__.py  agents.py  health.py  parliamentary.py
triad/core/: __init__.py  constitutional.py  dependencies.py  framework.py
triad/core/config/: __init__.py  config.py  organization_config.py
triad/core/logging/: __init__.py  logfire_config.py
triad/core/messaging/: __init__.py  message_history.py
triad/database/: models_prisma.py  prisma_client.py
triad/graphs/: parliamentary_workflows.py
triad/mcp/: __init__.py  adapters.py  base_server.py  client.py  servers.py  tools.py
triad/parliamentary/: __init__.py  crisis.py  crown.py  procedures.py
triad/tools/: __init__.py
triad/tools/governance/: __init__.py  base.py  compliance.py  compliance_advanced.py  governance_toolsets.py  legislative.py  policy.py  procedures.py  process.py
triad/tools/integration/: __init__.py  mcp_integration.py
triad/tools/mcp/: __init__.py  (+1 more)
